Color in TimeTable

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -6,7 +6,7 @@
 // ----- LOGIN PAGE ----- //
 
 .login-bg {
-    background: url('../assets/img/bg/CyberjayaMap.png');
+    background: url('../assets/img/bg/gerbang-senja.jpg');
     background-size: cover;
 }
 .login-bg-eff {
